# open-flow

./: .gitignore  LICENSE  Makefile  Open Flow.html  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
packaging/: OpenFlow.spec  build.sh  make_icon.py
scripts/: download_models.py
src/open_flow/: __init__.py  __main__.py  audio.py  cleanup.py  config.py  hud.py  main.py  transcribe.py  tray.py
src/open_flow/core/: cleanup.py  hotkey.py  inject.py  pipeline.py  transcribe.py
src/open_flow/data/: activity.py  config.py
src/open_flow/infra/: launch_agent.py  permissions.py
src/open_flow/resources/: welcome.html
src/open_flow/ui/: dashboard.py  design.py  hud.py  onboarding.py  toast.py  tray.py
